--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Alumni+Sans+Inline+One|Roboto|Faster+One"
+      href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Alumni+Sans+Inline+One|Roboto|Faster+One|Baloo+2"
       rel="stylesheet">
 </head>
 <body>
