Add map componeent

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <link
     href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Alumni+Sans+Inline+One|Roboto|Faster+One|Baloo+2|Sniglet"
     rel="stylesheet">
+  <!-- @import url('https://fonts.googleapis.com/css2?family=Tourney:wght@500;700+family=Jacques+Francois+Shadow&display=swap'); -->
 </head>
 
 <body>
