--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
   <link
     href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Alumni+Sans+Inline+One|Roboto|Faster+One|Baloo+2|Sniglet"
     rel="stylesheet">
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <!-- @import url('https://fonts.googleapis.com/css2?family=Tourney:wght@500;700+family=Jacques+Francois+Shadow&display=swap'); -->
 </head>
 
