--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <!-- @import url('https://fonts.googleapis.com/css2?family=Tourney:wght@500;700+family=Jacques+Francois+Shadow&display=swap'); -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEppXv1x4PO7JuRu332GQTizl3ZCpNu-M"></script>
 </head>
 
 <body>
